--- a/web_manager/src/main/webapp/admin/goods.html
+++ b/web_manager/src/main/webapp/admin/goods.html
@@ -48,6 +48,8 @@
                                         <button type="button" ng-click="updateStatus('1')" class="btn btn-default" title="审核通过" ><i class="fa fa-check"></i> 审核通过</button>
                                         <button type="button" ng-click="updateStatus('2')" class="btn btn-default" title="驳回" ><i class="fa fa-ban"></i> 驳回</button>                                  
                                         <button type="button" class="btn btn-default" title="刷新" ><i class="fa fa-refresh"></i> 刷新</button>
+                                        <button type="button" ng-click="export()" title="导出" ><i class="fa fa-refresh"></i> 导出</button>
+
                                     </div>
                                 </div>
                             </div>
