--- a/web_manager/src/main/webapp/admin/index.html
+++ b/web_manager/src/main/webapp/admin/index.html
@@ -374,6 +374,17 @@
 				                    <i class="fa fa-circle-o"></i>商品审核
 				                </a>
 				            </li>
+                            <li id="admin-login">
+				                <a href="seckillGoods.html" target="iframe">
+				                    <i class="fa fa-circle-o"></i>秒杀商品审核
+				                </a>
+				            </li>
+
+                            <li id="admin-login">
+				                <a href="seckillGoodsOrder.html" target="iframe">
+				                    <i class="fa fa-circle-o"></i>秒杀订单查询
+				                </a>
+				            </li>
 				        </ul>                        
 				    </li>
 					
