--- a/web_shop/src/main/webapp/admin/index.html
+++ b/web_shop/src/main/webapp/admin/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="../css/style.css">
     
     <script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
-    <script src="../plugins/jQueryUI/jquery-ui.min.js"></script>
     <script src="../plugins/bootstrap/js/bootstrap.min.js"></script>
   
     <script src="../plugins/adminLTE/js/app.min.js"></script>
@@ -352,6 +351,28 @@
 				            </li>
 				        </ul>                        
 				    </li>
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-folder"></i>
+                            <span>商家后台</span>
+                            <span class="pull-right-container">
+				       			<i class="fa fa-angle-left pull-right"></i>
+				   		 	</span>
+                        </a>
+                        <ul class="treeview-menu">
+
+                            <li id="admin-login">
+                                <a href="sellImg.html" target="iframe">
+                                    <i class="fa fa-circle-o"></i> 销售折线图
+                                </a>
+                            </li>
+                            <li id="admin-login">
+                                <a href="goods.html" target="iframe">
+                                    <i class="fa fa-circle-o"></i> 商品管理
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
 					
 				    <!-- 菜单 /-->
 
