--- a/web_user/src/main/webapp/home-order-send.html
+++ b/web_user/src/main/webapp/home-order-send.html
@@ -10,9 +10,21 @@
 
     <link rel="stylesheet" type="text/css" href="css/webbase.css" />
     <link rel="stylesheet" type="text/css" href="css/pages-seckillOrder.css" />
+
+    <!-- 引入分页相关的JS和CSS -->
+    <script type="text/javascript" src="plugins/angularjs/pagination.css"></script>
+    <link rel="stylesheet" href="plugins/angularjs/pagination.js">
+
+    <script type="text/javascript" src="plugins/angularjs/angular.min.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
+    <script type="text/javascript" src="js/service/loginService.js"></script>
+    <script type="text/javascript" src="js/service/userService.js"></script>
+    <script type="text/javascript" src="js/controller/indexController.js"></script>
+    <script type="text/javascript" src="js/controller/baseController.js"></script>
+
 </head>
 
-<body>
+<body ng-app="pinyougou" ng-controller="indexController" ng-init="prePay('3');search(1,10);showName()">
     <!-- 头部栏位 -->
     <!--页面顶部-->
 <div id="nav-bottom">
@@ -153,7 +165,7 @@ $(function(){
                     <div class="person-info">
                         <div class="person-photo"><img src="img/_/photo.png" alt=""></div>
                         <div class="person-account">
-                            <span class="name">Michelle</span>
+                            <span class="name">{{loginName}}</span>
                             <span class="safe">账户安全</span>
                         </div>
                         <div class="clearfix"></div>
@@ -212,149 +224,66 @@ $(function(){
                                         </ul>
                                     </div>
                                 </div>
-                                <!--order1-->
-                                <div class="choose-title">
-                                    <label data-toggle="checkbox" class="checkbox-pretty ">
-                                           <input type="checkbox" checked="checked"><span>2017-02-11 11:59　订单编号：7867473872181848  店铺：哇哈哈 <a>和我联系</a></span>
-                                     </label>
+
+                                <div class="choose-title"ng-repeat-start="entity in list">
+                                    <label data-toggle="checkbox" class="checkbox-pretty " >
+                                        <input type="checkbox" checked="checked"><span>{{entity.updateTime}}　订单编号：{{entity.orderId}}  店铺：{{entity.sellerId}} <a>和我联系</a></span>
+                                    </label>
                                     <a class="sui-btn btn-info share-btn">分享</a>
                                 </div>
-                                <table class="sui-table table-bordered order-datatable">
+                                <table class="sui-table table-bordered order-datatable" ng-repeat-end>
                                     <tbody>
-                                        <tr>
-                                            <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
-                                                </div>
-                                            </td>
-                                            <td width="5%" class="center">
-                                                <ul class="unstyled">
-                                                    <li class="o-price">¥599.00</li>
-                                                    <li>¥299.00</li>
-                                                </ul>
-                                            </td>
-                                            <td width="5%" class="center">1</td>
-                                            <td width="8%" class="center">
-                                                <ul class="unstyled">
-                                                    <li>已发货</li>
-                                                    <li><a>退货/退款</a></li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center" rowspan="2">
-                                                <ul class="unstyled">
-                                                    <li>¥299.00</li>
-                                                    <li>（含运费：￥0.00）</li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center" rowspan="2">
-                                                <ul class="unstyled">
-                                                    <li>部分发货</li>
-                                                    <li><a href="orderDetail.html" class="btn">订单详情 </a></li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center" rowspan="2">
-                                                <ul class="unstyled">
-                                                    <li>还剩4天23时</li>
-                                                    <li><a href="#" class="sui-btn btn-info">确认发货</a></li>
-                                                </ul>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
-                                                </div>
-                                            </td>
-                                            <td width="5%" class="center">
-                                                <ul class="unstyled">
-                                                    <li class="o-price">¥199.00</li>
-                                                    <li>¥212.00</li>
-                                                </ul>
-                                            </td>
-                                            <td width="5%" class="center">1</td>
-                                            <td width="8%" class="center">
-                                                <ul class="unstyled">
-                                                    <li>未发货</li>
-                                                    <li><a>退货/退款</a></li>
-                                                </ul>
-                                            </td>
+                                    <tr ng-repeat="orderItem in entity.orderItemList">
+                                        <td width="35%">
+                                            <div class="typographic"><img src="{{orderItem.picPath}}" width="100px" height="100px"   />
+                                                <a href="#" class="block-text">{{orderItem.title}}</a>
+                                                <!--规格-->
+                                                <span class="guige">{{orderItem.specMap.spec}}</span>
+                                            </div>
+                                        </td>
+                                        <td width="5%" class="center">
+                                            <ul class="unstyled">
+                                                <!--降价前价格-->
+                                                <li class="o-price">￥{{orderItem.costPirce}}</li>
+                                                <li>￥{{orderItem.price}}</li>
+                                            </ul>
+                                        </td>
+                                        <td width="5%" class="center">{{orderItem.num}}(个/件)</td>
+                                        <td width="8%" class="center">
+                                            {{entity.status=="4" ? "已发货" :(entity.status=="5" ? "交易成功" :(entity.status=="3" ? "未发货":
+                                            (entity.status=="6" ? "交易关闭":(entity.status=="7" ? "待评价":(entity.status=="1" ? "待付款":
+                                            (entity.status=="2" ? "已付款":null))))))}}
+                                        </td>
+                                        <td width="10%" class="center" >
+                                            <ul class="unstyled">
+                                                <li>￥{{entity.payment}}</li>
+                                                <li>（含运费：0)</li>   <!--￥{{entity.postFee}}）-->
+                                            </ul>
+                                        </td>
+                                        <td width="10%" class="center">
+                                            <ul class="unstyled">
+                                                <li> {{entity.status=="4" ? "已发货" :(entity.status=="5" ? "交易成功" :(entity.status=="3" ? "未发货":
+                                                    (entity.status=="6" ? "交易关闭":(entity.status=="7" ? "待评价":(entity.status=="1" ? "待付款":
+                                                    (entity.status=="2" ? "已付款":null))))))}}</li>
+                                                <li><a href="orderDetail.html" class="btn">订单详情 </a></li>
+                                            </ul>
+                                        </td>
+                                        <td width="10%" class="center">
+                                            <ul class="unstyled">
+                                                <li><a href="#" class="sui-btn btn-info" ng-click="pay(entity.orderId,entity.payment)">立即付款</a></li>
+                                                <li>取消订单</li>
 
-
-                                        </tr>
-
-                                    </tbody>
-                                </table>
-
-                                <!--order2-->
-                                <div class="choose-title">
-                                    <label data-toggle="checkbox" class="checkbox-pretty ">
-                                           <input type="checkbox" checked="checked"><span>2017-02-11 11:59　订单编号：7867473872181848  店铺：哇哈哈 <a>和我联系</a></span>
-                                     </label>
-                                    <a class="sui-btn btn-info share-btn">分享</a>
-                                </div>
-                                <table class="sui-table table-bordered order-datatable">
-                                    <tbody>
-                                        <tr>
-                                            <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
-                                                </div>
-                                            </td>
-                                            <td width="5%" class="center">
-                                                <ul class="unstyled">
-                                                    <li class="o-price">¥599.00</li>
-                                                    <li>¥299.00</li>
-                                                </ul>
-                                            </td>
-                                            <td width="5%" class="center">1</td>
-                                            <td width="8%" class="center">
-                                                <ul class="unstyled">
-
-                                                    <li><a>退货/退款</a></li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center">
-                                                <ul class="unstyled">
-                                                    <li>¥299.00</li>
-                                                    <li>（含运费：￥0.00）</li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center">
-                                                <ul class="unstyled">
-                                                    <li>买家已付款</li>
-                                                    <li><a href="orderDetail.html" class="btn">订单详情 </a></li>
-                                                </ul>
-                                            </td>
-                                            <td width="10%" class="center">
-                                                <ul class="unstyled">
-                                                    <li><a href="#" class="sui-btn btn-info">提醒发货</a></li>
-                                                </ul>
-                                            </td>
-                                        </tr>
+                                            </ul>
+                                        </td>
+                                    </tr>
 
 
                                     </tbody>
                                 </table>
                             </div>
                             <div class="choose-order">
-
-                                <div class="sui-pagination pagination-large top-pages">
-                                    <ul>
-                                        <li class="prev disabled"><a href="#">«上一页</a></li>
-                                        <li class="active"><a href="#">1</a></li>
-                                        <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
-                                        <li class="dotted"><span>...</span></li>
-                                        <li class="next"><a href="#">下一页»</a></li>
-                                    </ul>
-                                    <div><span>共10页&nbsp;</span><span>
-                                            到
-                                            <input type="text" class="page-num"><button class="page-confirm" onclick="alert(1)">确定</button>
-                                            页</span></div>
-                                </div>
+								<!-- 分页 -->
+								<tm-pagination conf="paginationConf"></tm-pagination>
                             </div>
 
                             <div class="clearfix"></div>
