--- a/web_user/src/main/webapp/home-setting-address.html
+++ b/web_user/src/main/webapp/home-setting-address.html
@@ -10,9 +10,14 @@
 
     <link rel="stylesheet" type="text/css" href="css/webbase.css" />
     <link rel="stylesheet" type="text/css" href="css/pages-seckillOrder.css" />
+
+	<script type="text/javascript" src="plugins/angularjs/angular.min.js"> </script>
+	<script type="text/javascript" src="js/base.js"> </script>
+	<script type="text/javascript" src="js/service/cartService.js"> </script>
+	<script type="text/javascript" src="js/controller/cartController.js"> </script>
 </head>
 
-<body>
+<body ng-app="pinyougou" ng-controller="cartController" ng-init="findAddressList();selectItemCat1List()">
     <!-- 头部栏位 -->
     <!--页面顶部-->
 <div id="nav-bottom">
@@ -142,9 +147,20 @@ $(function(){
 <script type="text/javascript" src="js/plugins/sui/sui.min.js"></script>
 <script type="text/javascript" src="js/plugins/jquery-placeholder/jquery.placeholder.min.js"></script>
 <script type="text/javascript" src="js/widget/nav.js"></script>
-<script type="text/javascript" src="pages/userInfo/distpicker.data.js"></script>
-<script type="text/javascript" src="pages/userInfo/distpicker.js"></script>
-<script type="text/javascript" src="pages/userInfo/main.js"></script>
+<script type="text/javascript" src="js/plugins/birthday/birthday.js"></script>
+<script type="text/javascript" src="js/plugins/citypicker/distpicker.data.js"></script>
+<script type="text/javascript" src="js/plugins/citypicker/distpicker.js"></script>
+<script type="text/javascript" src="js/plugins/upload/uploadPreview.js"></script>
+<script type="text/javascript" src="js/pages/main.js"></script>
+	<script>
+        $(function() {
+            $.ms_DatePicker({
+                YearSelector: "#select_year2",
+                MonthSelector: "#select_month2",
+                DaySelector: "#select_day2"
+            });
+        });
+	</script>
 </body>
     <!--header-->
     <div id="account">
@@ -191,7 +207,7 @@ $(function(){
                     <div class="body userAddress">
                         <div class="address-title">
                             <span class="title">地址管理</span>
-                            <a data-toggle="modal" data-target=".edit" data-keyboard="false"   class="sui-btn  btn-info add-new">添加新地址</a>
+                            <a data-toggle="modal" data-target=".edit" data-keyboard="false"   class="sui-btn  btn-info add-new" ng-click="entity={}">添加新地址</a>
                             <span class="clearfix"></span>
                         </div>
                         <div class="address-detail">
@@ -205,27 +221,35 @@ $(function(){
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>刘田田</td>
-                                        <td>北京 北京市 海淀区 上地街道东北旺西路8号中关村软件园9号楼</td>
-                                        <td>1774***********4</td>
-                                        <td>
-                                            <a href="#">编辑</a>
-                                            <a href="#">删除</a>
-                                            默认地址
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>沈沉</td>
-                                        <td>北京 北京市 海淀区 上地街道东北旺西路8号中关村软件园9号楼</td>
-                                        <td>1774***********4</td>
-                                        <td>
-                                            <a href="#">编辑</a>
-                                            <a href="#">删除</a>
-                                            <a href="#">设为默认</a>
-                                        </td>
-                                    </tr>
-                                    
+								<tr ng-repeat="address in addressList">
+									<td>{{address.contact}}</td>
+									<td>{{address.address}}</td>
+									<td>{{address.mobile}}</td>
+									<td>
+										<button type="button" data-toggle="modal" data-target=".edit" data-keyboard="false"   class="sui-btn  btn-info add-new" ng-click="findById(address.id)">编辑</button>
+										<button type="button" class="sui-btn  btn-info add-new" title="删除" ng-click="dele(address.id)"><i class="fa fa-trash-o"></i> 删除</button>
+										<button type="button" class="sui-btn  btn-info add-new" title="默认地址" ng-click="updateStatus(address.id)"><i class="fa fa-trash-o"></i> 默认地址</button>
+									</td>
+								</tr>
+                                    <!--<tr>-->
+                                        <!--<td>刘田田</td>-->
+                                        <!--<td>北京 北京市 海淀区 上地街道东北旺西路8号中关村软件园9号楼</td>-->
+                                        <!--<td>1774***********4</td>-->
+                                        <!--<td>-->
+                                            <!--<a href="#">编辑</a>-->
+                                            <!--<a href="#">删除</a>-->
+                                            <!--默认地址-->
+                                        <!--</td>-->
+                                    <!--</tr>-->
+
+									<!--<div ng-repeat="address in addressList">-->
+										<!--<div class="con name {{isSeletedAddress(address)?'selected':''}}"><a href="javascript:;" ng-click="selectAddress(address)">{{address.contact}}<span title="点击取消选择">&nbsp;</a></div>-->
+										<!--<div class="con address">{{address.address}}<span>{{address.mobile}}</span>-->
+											<!--<span class="base" ng-if="address.isDefault=='1'">默认地址</span>-->
+											<!--<span class="edittext"><a data-toggle="modal" data-target=".edit" data-keyboard="false" >编辑</a>&nbsp;&nbsp;<a href="javascript:;">删除</a></span>-->
+										<!--</div>-->
+										<!--<div class="clearfix"></div>-->
+									<!--</div>-->
                                 </tbody>
                             </table>                          
                         </div>
@@ -242,47 +266,63 @@ $(function(){
                                             <div class="control-group">
                                             <label class="control-label">收货人：</label>
                                             <div class="controls">
-                                                <input type="text" class="input-medium">
+                                                <input type="text" class="input-medium" ng-model="entity.contact">
                                             </div>
                                         </div>
+											<!--所在地-->
+											<!--<div class="control-group">-->
+												<!--<label for="inputPassword" class="control-label">所在地：</label>-->
+												<!--<div class="controls">-->
+													<!--<div data-toggle="distpicker">-->
+														<!--<div class="form-group area">-->
+															<!--<select class="form-control" id="province1" ng-model="entity.provinceId" ng-options="provinces.provinceid as provinces.province for provinces in provinceList"></select>-->
+														<!--</div>-->
+														<!--<div class="form-group area">-->
+															<!--<select class="form-control" id="city1"></select>-->
+														<!--</div>-->
+														<!--<div class="form-group area">-->
+															<!--<select class="form-control" id="district1"></select>-->
+														<!--</div>-->
+													<!--</div>-->
+												<!--</div>-->
+											<!--</div>-->
+
                                         <div class="control-group">
                                             <label class="control-label">所在地区：</label>
-                                            <div class="controls">
-                                                <div data-toggle="distpicker">
-                                                <div class="form-group area">
-                                                    <select class="form-control" id="province1"></select>
-                                                </div>
-                                                <div class="form-group area">
-                                                    <select class="form-control" id="city1"></select>
-                                                </div>
-                                                <div class="form-group area">
-                                                    <select class="form-control" id="district1"></select>
-                                                </div>
-                                            </div>
-                                            </div>									 
+											<td>
+												<select class="form-control" ng-model="entity.provinceId" ng-options="provinces.provinceid as provinces.province for provinces in provinceList">
+												</select>
+											</td>
+											<td>
+												<select class="form-control select-sm"  ng-model="entity.cityId" ng-options="citys.cityid as citys.city for citys in cityList"></select>
+											</td>
+											<td>
+												<select class="form-control select-sm" ng-model="entity.townId" ng-options="areas.areaid as areas.area for areas in areaList"></select>
+											</td>
                                         </div>
+
                                         <div class="control-group">
                                             <label class="control-label">详细地址：</label>
                                             <div class="controls">
-                                                <input type="text" class="input-large">
+                                                <input type="text" class="input-large" ng-model="entity.address">
                                             </div>
                                         </div>
                                         <div class="control-group">
                                             <label class="control-label">联系电话：</label>
                                             <div class="controls">
-                                                <input type="text" class="input-medium">
+                                                <input type="text" class="input-medium" ng-model="entity.mobile">
                                             </div>
                                         </div>
                                         <div class="control-group">
                                             <label class="control-label">邮箱：</label>
                                             <div class="controls">
-                                                <input type="text" class="input-medium">
+                                                <input type="text" class="input-medium" ng-model="entity.notes">
                                             </div>
                                         </div>
                                         <div class="control-group">
                                             <label class="control-label">地址别名：</label>
                                             <div class="controls">
-                                                <input type="text" class="input-medium">
+                                                <input type="text" class="input-medium" ng-model="entity.alias">
                                             </div>
                                             <div class="othername">
                                                 建议填写常用地址：<a href="#" class="sui-btn btn-default">家里</a>　<a href="#" class="sui-btn btn-default">父母家</a>　<a href="#" class="sui-btn btn-default">公司</a>
@@ -294,7 +334,7 @@ $(function(){
                                         
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" data-ok="modal" class="sui-btn btn-primary btn-large">确定</button>
+                                        <button type="button" data-ok="modal" class="sui-btn btn-primary btn-large" ng-click="save()">确定</button>
                                         <button type="button" data-dismiss="modal" class="sui-btn btn-default btn-large">取消</button>
                                     </div>
                                 </div>
