Echars折线图,饼状图.

--- a/web_manager/src/main/webapp/admin/index.html
+++ b/web_manager/src/main/webapp/admin/index.html
@@ -337,6 +337,16 @@
 				                    <i class="fa fa-circle-o"></i>商家管理
 				                </a>
 				            </li>
+                            <li id="admin-login">
+                                <a href="echars.jsp" target="iframe">
+                                    <i class="fa fa-circle-o"></i>销售折线图
+                                </a>
+                            </li>
+                            <li id="admin-login">
+                                <a href="echarsB.jsp" target="iframe">
+                                    <i class="fa fa-circle-o"></i>销售饼状图
+                                </a>
+                            </li>
 				        </ul>                        
 				    </li>
 					<li class="treeview">
